<!DOCTYPE resources [
    <!-- Non-breaking space, U+00A0. -->
    <!ENTITY nbsp "&#160;">
    ]>
<resources>
    <string name="app_name">android_curse</string>
    <string name="onboarding_view_pager_text_1">Осень 2021&nbsp;г., СПбГУ</string>
    <string name="onboarding_view_pager_text_2">Мы изучаем разработку под Android</string>
    <string name="onboarding_view_pager_text_3">Добро пожаловатьв команду</string>
    <string name="onboarding_sign_in_button">Войти</string>
    <string name="onboarding_sign_Up_button">Зарегистрироваться</string>
    <string name="bottom_navigation_title_news">Лента</string>
    <string name="bottom_navigation_title_likes">Лайки</string>
    <string name="bottom_navigation_title_bookmarks">Закладки</string>
    <string name="bottom_navigation_title_profile">Профиль</string>
    <string name="bottom_navigation_title_user_list">Люди</string>
    <string name="sign_in_sign_in_button">Войти</string>
    <string name="sign_in_email_text_layout_hint">почта</string>
    <string name="sign_in_password_text_layout_hint">пароль</string>
    <string name="sign_in_back_buttom_alert_title">Введённые данные пропадут</string>
    <string name="sign_in_back_buttom_alert_negative">отмена</string>
    <string name="sign_in_back_buttom_alert_positive">ок</string>
    <string name="sign_up_terms_and_conditions_template">Я принимаю %s</string>
    <string name="sign_up_club_rules">правила клуба</string>
    <string name="sign_up_firstname_text_layout_hint">Имя</string>
    <string name="sign_up_lastname_text_layout_hint">Фамилия</string>
    <string name="sign_up_nickname_text_layout_hint">Имя пользавателя</string>
    <string name="sign_up_under_email_text">не будет видно другим пользавателям</string>
    <string name="sign_up_under_nickname_text">Имя пользавателя будет видно другим пользавателям</string>
    <string name="sign_up_email_text_layout_hint">Почта</string>
    <string name="sign_up_sign_up_button_text">Зарегистрироваться</string>
    <string name="profile_logout_button_text">Выйти</string>
    <string name="common_general_error_text">упс, что-то пошло не так</string>
    <string name="news_toolbar_title">мобильная разроботка</string>
    <string name="common_counter_prefix">+%d</string>
</resources>